Adding headless firefox

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,8 @@
 dist: xenial
 
+addons:
+  firefox: latest
+
 language: python
 
 python:
@@ -7,6 +10,8 @@ python:
 
 # setup environment
 env:
+  global:
+    - MOZ_HEADLESS=1
 - DJANGO_VERSION=2.2
 
 # install dependencies
