--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,12 @@ env:
 - MOZ_HEADLESS=1
 - DJANGO_VERSION=2.2
 
+before_install:
+  - wget https://github.com/mozilla/geckodriver/releases/download/v0.24.0/geckodriver-v0.24.0-linux64.tar.gz
+  - mkdir geckodriver
+  - tar -xzf geckodriver-v0.24.0-linux64.tar.gz -C geckodriver
+  - export PATH=$PATH:$PWD/geckodriver
+
 # install dependencies
 install:
 - pip install -r requirements.txt
