--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,8 @@
 dist: xenial
 
+addons:
+  firefox: latest
+
 language: python
 
 python:
@@ -11,6 +14,12 @@ python:
 env:
 - DJANGO_VERSION=2.2
 
+before_install:
+  - wget https://github.com/mozilla/geckodriver/releases/download/v0.24.0/geckodriver-v0.24.0-linux64.tar.gz
+  - mkdir geckodriver
+  - tar -xzf geckodriver-v0.24.0-linux64.tar.gz -C geckodriver
+  - export PATH=$PATH:$PWD/geckodriver
+
 # install dependencies
 install:
 - pip install -r requirements.txt
@@ -18,6 +27,7 @@ install:
 
 # run test scripts
 script:
+- export MOZ_HEADLESS=1
 - coverage run --source='.' manage.py test
 
 # Push the results back to codecov
